@@ -9,6 +9,7 @@ to version.
 	<LI>Merged in special handling for PHP scripts by popular demand. This is based mostly on
 Piotr Klaban's php-cgiwrap patch, with minor changes.
 	<LI>Added options for php support. --with-php-interpreter and --with-php-cgiwrap
+	<LI>Rewrote the path translated support. Is it finally correct?
 </UL>
 
 <P><H3>New in version 3.7.1:</H3><UL>
